# dirtydash

./: .gitignore  Cargo.toml  PRODUCT.md  README.md  package-lock.json
.beads/: config.yaml  interactions.jsonl  issues.jsonl  metadata.json
crates/dirtydash/: Cargo.toml
crates/dirtydash/src/: app_paths.rs  cli.rs  collector.rs  config.rs  db.rs  deployment.rs  deployment_tests.rs  enrollment.rs  enrollment_tests.rs  hub.rs  importers.rs  lib.rs  listener.rs  loop_upgrade.rs  main.rs  pricing.rs  remote.rs  server.rs  service.rs  ssh.rs
crates/dirtydash/src/hub/: auth.rs  errors.rs  fleet.rs  ingestion.rs  mod.rs  protocol.rs  repository.rs  router.rs  tests.rs
crates/dirtydash/tests/: cli.rs  collector.rs
crates/dirtydash/tests/fixtures/claude-code/: session.jsonl
crates/dirtydash/tests/fixtures/codex/: session.jsonl
crates/dirtydash/tests/fixtures/hermes-agent/: session.jsonl
crates/dirtydash/tests/fixtures/opencode/: message.json
crates/dirtydash/tests/fixtures/pi/: session.jsonl
dashboard/: index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: machines.tsx  main.tsx  styles.css
dashboard/tests/: machines-a11y.test.tsx  machines-contract.test.mjs
docs/: deployment.md
docs/turns/: 2026-06-06-1737-init-product-context.html  2026-06-06-1759-configure-beads-dolt-remote.html  2026-06-06-1905-scaffold-dirtydash-v1.html  2026-06-06-1932-use-reported-codex-costs.html  2026-06-06-2009-fix-codex-accounting.html  2026-06-06-2235-reconcile-tokscale-usage.html  2026-06-07-1402-resolve-pr-2-merge-conflicts.html  2026-06-07-1858-clarify-cache-read-accounting.html  2026-06-07-1934-consolidate-model-slugs-pricing.html  2026-06-07-1948-preserve-codex-fast-model-totals.html  2026-06-08-0840-codexbar-cost-accounting-fast-bars.html  2026-06-08-0859-reconcile-codexbar-usage.html  2026-06-08-0920-restore-fast-mode-chart-usage.html  2026-06-08-0924-deploy-dirtydash.html  2026-06-08-0935-clarify-codex-fast-accounting.html  2026-06-08-0945-add-deploy-script.html  (+10 more)
scripts/: deploy-dirtydash
(+59 files in other folders)
