[package]
name = "dirtydash"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true

[lib]
name = "dirtydash"
path = "src/lib.rs"

[[bin]]
name = "dirtydash"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
argon2 = "0.5"
axum = "0.7"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4.5", features = ["derive", "env"] }
directories = "5.0"
hex = "0.4"
hostname = "0.4"
include_dir = "0.7"
mime_guess = "2.0"
notify = "6.1"
rand = "0.8"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.40", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tower = { version = "0.5", features = ["util"] }
walkdir = "2.5"
webbrowser = "1.0"

[dev-dependencies]
assert_cmd = "2.0"
http-body-util = "0.1"
predicates = "3.1"
tempfile = "3.12"
